content/docs/0.7.x/reference/cli/commands/keptn_generate.md
---
date: "2020-10-12T14:26:31+02:00"
title: "keptn generate"
slug: keptn_generate
---
## keptn generate

Generates the markdown CLI documentation or a support archive

### Synopsis

Generates the markdown CLI documentation or a support archive

### Options

```
  -h, --help   help for generate
```

### Options inherited from parent commands

```
      --mock                 Disables communication to a Keptn endpoint
  -q, --quiet                Suppresses debug and info messages
      --suppress-websocket   Disables WebSocket communication to suppress info messages from services running inside Keptn
  -v, --verbose              Enables verbose logging to print debug messages
```

### SEE ALSO

* [keptn](../keptn/)	 - The CLI for using Keptn
* [keptn generate docs](../keptn_generate_docs/)	 - Generates the markdown documentation for the Keptn CLI
* [keptn generate support-archive](../keptn_generate_support-archive/)	 - Generates a support archive containing all logs

###### Auto generated by spf13/cobra on 12-Oct-2020
