content/docs/0.8.x/reference/cli/commands/keptn_generate.md
---
date: "2020-11-19T19:04:54+05:30"
title: "keptn generate"
slug: keptn_generate
---
## keptn generate

Generates the markdown CLI documentation or a support archive

### Synopsis

Generates the markdown CLI documentation or a support archive

### Options

```
  -h, --help   help for generate
```

### Options inherited from parent commands

```
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default keptn). (default "keptn")
  -q, --quiet                Suppresses debug and info messages
      --suppress-websocket   Disables WebSocket communication to suppress info messages from services running inside Keptn
  -v, --verbose              Enables verbose logging to print debug messages
```

### SEE ALSO

* [keptn](../keptn/)	 - The CLI for using Keptn
* [keptn generate docs](../keptn_generate_docs/)	 - Generates the markdown documentation for the Keptn CLI
* [keptn generate support-archive](../keptn_generate_support-archive/)	 - Generates a support archive containing all logs

###### Auto generated by spf13/cobra on 19-Nov-2020
